fixed aside spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ aside {
     display: flex;
     align-items: end;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     padding: 10px;
     text-align: end;
 }
@@ -183,7 +183,7 @@ header nav .header-links {
 /* defines "about" label  */
 #label-1 {
     position: relative;
-    margin: -10px 0 -10px 0;
+    margin: -10px 0 50px 0;
     padding: -10px 0 -10px 0;
     Height: 5rem;
 }
@@ -208,8 +208,8 @@ header nav .header-links {
 /* defines "contact" label  */
 #label-3 {
     position: relative;
-    bottom: -175px;
-    margin: -10px 0 -10px 0;
+    /* bottom: -175px; */
+    margin: 100px 0 0px 0;
     padding: -10px 0 -10px 0;
     Height: 5rem;
 }
